@@ -1,7 +1,7 @@
 #  File src/library/base/R/scan.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -33,7 +33,8 @@ function(file = "", what = double(), nmax = -1L, n = -1L, sep = "",
             stop("either specify 'nmax' or 'n', but not both.")
     }
     if (missing(file) && !missing(text)) {
-	file <- textConnection(text)
+	file <- textConnection(text, encoding = "UTF-8")
+	encoding <- "UTF-8"
 	on.exit(close(file))
     }
 
