@@ -1,6 +1,6 @@
 % File src/library/base/man/pushBack.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2012 R Core Team
+% Copyright 1995-2014 R Core Team
 % Distributed under GPL 2 or later
 
 \name{pushBack}
@@ -13,7 +13,8 @@
   how many lines are currently pushed back.
 }
 \usage{
-pushBack(data, connection, newLine = TRUE)
+pushBack(data, connection, newLine = TRUE,
+         encoding = c("", "bytes", "UTF-8"))
 pushBackLength(connection)
 clearPushBack(connection)
 }
@@ -22,6 +23,7 @@ clearPushBack(connection)
   \item{connection}{A \link{connection}.}
   \item{newLine}{logical.  If true, a newline is appended to each string
     pushed back.}
+  \item{encoding}{character.  See details.}
 }
 \details{
   Several character strings can be pushed back on one or more occasions.
@@ -38,15 +40,17 @@ clearPushBack(connection)
   commands from the console and \code{\link{scan}("")} ignore pushbacks on
   \code{\link{stdin}}.
 
-  When character strings with a marked encoding (see
-  \code{\link{Encoding}}) are pushed back they are converted to the
-  current encoding.  This may involve representing characters as
-  \samp{<U+xxxx>} if they cannot be converted.
+  When character strings with a marked encoding (see \code{\link{
+  Encoding}}) are pushed back they are converted to the current
+  encoding if \code{encoding = ""}.  This may involve representing
+  characters as \samp{<U+xxxx>} if they cannot be converted.  They
+  will be converted to UTF-8 if \code{encoding = "UTF-8"} or left 
+  as-is if \code{encoding = "bytes"}.
 }
 \value{
   \code{pushBack} and \code{clearPushBack()} return nothing, invisibly.
 
-  \code{pushBackLength} returns number of lines currently pushed back.
+  \code{pushBackLength} returns the number of lines currently pushed back.
 }
 \seealso{\code{\link{connections}}, \code{\link{readLines}}.}
 
