@@ -1,7 +1,7 @@
 #  File src/library/utils/R/readtable.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2013 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -48,7 +48,8 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
          fileEncoding = "", encoding = "unknown", text, skipNul = FALSE)
 {
     if (missing(file) && !missing(text)) {
-	file <- textConnection(text)
+	file <- textConnection(text, encoding = "UTF-8")
+	encoding <- "UTF-8"
 	on.exit(close(file))
     }
     if(is.character(file)) {
@@ -62,6 +63,7 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
         open(file, "rt")
         on.exit(close(file))
     }
+    pbEncoding <- if (encoding %in% c("", "bytes", "UTF-8")) encoding else "bytes"
 
     if(skip > 0L) readLines(file, skip)
     ## read a few lines to determine header, no of cols.
@@ -69,6 +71,7 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
 
     lines <- .External(C_readtablehead, file, nlines, comment.char,
                        blank.lines.skip, quote, sep, skipNul)
+    if (encoding %in% c("UTF-8", "latin1")) Encoding(lines) <- encoding
     nlines <- length(lines)
     if(!nlines) {
         if(missing(col.names)) stop("no lines available in input")
@@ -77,9 +80,9 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
     } else {
         if(all(!nzchar(lines))) stop("empty beginning of file")
         if(nlines < n0lines && file == 0L)  { # stdin() has reached EOF
-            pushBack(c(lines, lines, ""), file)
+            pushBack(c(lines, lines, ""), file, encoding = pbEncoding)
             on.exit((clearPushBack(stdin())))
-        } else pushBack(c(lines, lines), file)
+        } else pushBack(c(lines, lines), file, encoding = pbEncoding)
         first <- scan(file, what = "", sep = sep, quote = quote,
                       nlines = 1, quiet = TRUE, skip = 0,
                       strip.white = TRUE,
@@ -97,6 +100,7 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
                                       blank.lines.skip = blank.lines.skip,
                                       comment.char = comment.char,
                                       allowEscapes = allowEscapes,
+				      encoding = encoding,
                                       skipNul = skipNul))
         cols <- max(col1, col)
 
